src/objects/SFDC_Job_Function__c.object
<CustomObject>
    <fields>
        <fullName>Benefit_Options__c</fullName>
        <label>Benefit Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>401k</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Location__c</fullName>
        <label>Core Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Headquarters</fullName>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Executive Committee</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salary_Range__c</fullName>
        <label>Salary Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$30,000-$45,000</fullName>
                </value>
                <value>
                    <fullName>$46,000-$60,000</fullName>
                </value>
                <value>
                    <fullName>$61,000-$85,000</fullName>
                </value>
                <value>
                    <fullName>$86,000-$100,000</fullName>
                </value>
                <value>
                    <fullName>$101,000-$150,000</fullName>
                </value>
                <value>
                    <fullName>$150,000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job Function</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Job Function Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Functions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>